# tds-project-2

./: .gitignore  LICENSE  autolysis.py  pyproject.toml
goodreads/: README.md
happiness/: README.md
media/: README.md
